fixed bug